Fix modlauncher tests